Водно-дисперсионная краска

--- a/csv/000res/resource.htm
+++ b/csv/000res/resource.htm
@@ -38,11 +38,13 @@
 <br>Основной ассортимент буров SDS plus представлен на странице буров <a href="/catalog/cat47.shtml">BERGEN</a>.
 <br>Основной ассортимент буров SDS Max представлен на страницах буров <a href="/catalog/cat302.shtml">RENNBOHR</a> и <a href="/catalog/cat48.shtml">BERGEN</a>.
 
+============================== Settings.nds_info ==============================
 <span class="nds">Все цены указаны с учетом НДС и актуальны на {DATE}.</span>
-<span class="price"><br>Количество товара на складе уточняйте у менеджера.</span>
-<span class="price"><br><br><b>Оптовая цена</b> действует при сумме счета от <b>20 тысяч</b> рублей.
-<br><b>Крупнооптовая</b> &mdash; при сумме счета от <b>50 тысяч</b> рублей.
-<br>Постоянным клиентам &mdash; особые условия.</span>
+<span class="q"><br>Количество товара на складе уточняйте у менеджера.</span>
+<br><span class="p2"><br><b>Оптовая цена</b> действует при сумме счета от <b>20 тысяч</b> рублей.
+<span class="p3"><br><b>Крупнооптовая</b> &mdash; при сумме счета от <b>50 тысяч</b> рублей.</span></span>
+<span class="const"><br>Постоянным клиентам &mdash; особые условия.</span>
+
 <p class="price-none">Цены и количество товара на складе узнавайте у менеджера.</p>
 <p class="price-none">К указанным на сайте ценам могут быть применены скидки.</p>
 <p class="subtit price-none">О наличии товара и действующих ценах осведомляйтесь у менеджеров.</p>
@@ -172,7 +174,8 @@ entry-list<
 <div class="">
   <table>
     <tr class="w e">
-      <td id="q"></td>
+      <td id="q">&laquo;&lt;&raquo;&gt;&prime;&invisiblecomma;&nbsp;&mdash;&prime;&lt;div id="xxx"&gt;&lt;/div&gt;
+      <!-- /#xxx --></td>
     </tr>
   </table>
 </div>
