--- a/csv/000res/xref.htm
+++ b/csv/000res/xref.htm
@@ -132,7 +132,11 @@
     <td class="arrow"><a href="/catalog/cat218.shtml"><img width="20" height="30" src="/img/1pix.gif" alt=""></a></td>
   </tr></table></div>
 ==============================
-<div class="ref"></div>
+<div class="ref"><table cellpadding="0" class="cblock">
+  <tr><td><a href="/catalog/cat183.shtml"><img src="/img/pic/abraz/small/SCHETKI DLJA USHM - foto na PODRAZDEL.jpg" width="98" height="70" alt="" /></a></td>
+    <td class="txt"><a href="/catalog/cat183.shtml">Щетки для УШМ и дрели</a></td>
+    <td class="arrow"><a href="/catalog/cat183.shtml"><img width="20" height="30" src="/img/1pix.gif" alt=""></a></td>
+  </tr></table></div>
 ==============================
 <div class="ref"></div>
 ==============================
@@ -141,7 +145,7 @@
 <div class="ref"></div>
 ==============================
 <div class="ref"></div>
-============================================================
+============================== Banners ==============================
 <div class="ref">
 <table class="cblock" cellpadding="0">
   <tbody><tr><td><a href="/catalog/cat47.shtml"><img src="/img/pic/drill/small/BURY SDS PLUS.jpg" alt="" height="70" width="98"></a></td>
