--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,5 +1,6 @@
 <div id=n>
 <h2>Новинки</h2><DL>
+  <DT>17 авг : <DD><a href="/catalog/cat313.shtml" title="Новые товары"><span class="title">Водно-дисперсионная краска</span><span class="dop"> KRAFOR</span></a><br>
   <DT>14 авг : <DD><a href="/catalog/cat392.shtml" title="Расширен ассортимент"><span class="title">Ножницы садовые</span><span class="dop"> TRUPER</span></a><br>
   <DT>06 авг : <DD><a href="/catalog/cat57.shtml"  title="Расширен ассортимент"><span class="title">Ножницы по металлу</span><span class="dop"> GROSS</span></a><br>
   <DT>29 июл: <DD><a href="/catalog/cat158.shtml" title="Новый товар"><span class="title">Плащ-дождевик</span><span class="dop">, 50 мкм</span></a><br>
@@ -8,11 +9,6 @@
   <DT>16 июл: <DD><a href="/catalog/cat139.shtml" title="Новые товары"><span class="title">Молотки слесаные</span><span class="dop"> GROSS</span></a><br>
   <DT>15 июл: <DD><a href="/catalog/cat47.shtml"  title="Новые товары"><span class="title">Буры по бетону SDS+</span><span class="dop"> UNIVERSE</span></a><br>
   <DT>15 июл: <DD><a href="/catalog/cat186.shtml"  title="Новый товар"><span class="title">Шпагат льнопеньковый</span><span class="dop"></span></a><br>
-  <DT>06 июл: <DD><a href="/catalog/cat45.shtml"  title="Цены снижены"><span class="title">Электроды сварочные</span><span class="dop"> ЛЭЗ</span></a><br>
-  <DT>29 июн: <DD><a href="/catalog/cat118.shtml" title="Цены снижены"><span class="title">Проволока ОК Т/О 1.2 мм</span><span class="dop"></span></a><br>
-  <DT>29 июн: <DD><a href="/catalog/cat47.shtml"  title="Цены снижены"><span class="title">Буры SDS Plus</span><span class="dop"> BERGEN</span></a><br>
-  <DT>26 июн: <DD><a href="/catalog/cat32.shtml"  title="Цены снижены"><span class="title">Шпильки резьбовые</span><span class="dop"></span></a><br>
-  <DT>25 июн: <DD><a href="/catalog/cat48.shtml"  title="Цены снижены"><span class="title">Буры SDS Max</span><span class="dop"> BERGEN</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
 <h2>Рекомендуемые товары</h2>
