--- a/pages/iblock/iblock_o.htm
+++ b/pages/iblock/iblock_o.htm
@@ -1,3 +1,8 @@
+<DT>06 июл: <DD><a href="/catalog/cat45.shtml"  title="Цены снижены"><span class="title">Электроды сварочные</span><span class="dop"> ЛЭЗ</span></a><br>
+<DT>29 июн: <DD><a href="/catalog/cat118.shtml" title="Цены снижены"><span class="title">Проволока ОК Т/О 1.2 мм</span><span class="dop"></span></a><br>
+<DT>29 июн: <DD><a href="/catalog/cat47.shtml"  title="Цены снижены"><span class="title">Буры SDS Plus</span><span class="dop"> BERGEN</span></a><br>
+<DT>26 июн: <DD><a href="/catalog/cat32.shtml"  title="Цены снижены"><span class="title">Шпильки резьбовые</span><span class="dop"></span></a><br>
+<DT>25 июн: <DD><a href="/catalog/cat48.shtml"  title="Цены снижены"><span class="title">Буры SDS Max</span><span class="dop"> BERGEN</span></a><br>
 <DT>25 июн: <DD><a href="/catalog/cat14.shtml"  title="Цены снижены"><span class="title">Гвозди строительные</span><span class="dop"></span></a><br>
 <DT>24 июн: <DD><a href="/catalog/cat87.shtml"  title="Цены снижены"><span class="title">Перчатки </span><span class="dop"> нитриловые</span></a><br>
 <DT>23 июн: <DD><a href="/catalog/cat45.shtml"  title="Цены снижены"><span class="title">Электроды</span><span class="dop"> з-да СпецЭлектрод</span></a><br>
