--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,6 +1,8 @@
 <div id=n>
 <h2>Новинки</h2><DL>
-  <DT>17 авг : <DD><a href="/catalog/cat313.shtml" title="Новые товары"><span class="title">Водно-дисперсионная краска</span><span class="dop"> KRAFOR</span></a><br>
+  <DT>24 авг : <DD><a href="/catalog/cat101.shtml" title="Новые товары"><span class="title">Лопаты штыковые</span><span class="dop"> TRUPER</span></a><br>
+  <DT>19 авг : <DD><a href="/catalog/cat431.shtml" title="Новый товар"><span class="title">Миксер промышленный</span><span class="dop"> MAKITA</span></a><br>
+  <DT>17 авг : <DD><a href="/catalog/cat313.shtml" title="Новые товары"><span class="title">Водно-дисперсионная краска</span><span class="dop"></span></a><br>
   <DT>14 авг : <DD><a href="/catalog/cat392.shtml" title="Расширен ассортимент"><span class="title">Ножницы садовые</span><span class="dop"> TRUPER</span></a><br>
   <DT>06 авг : <DD><a href="/catalog/cat57.shtml"  title="Расширен ассортимент"><span class="title">Ножницы по металлу</span><span class="dop"> GROSS</span></a><br>
   <DT>29 июл: <DD><a href="/catalog/cat158.shtml" title="Новый товар"><span class="title">Плащ-дождевик</span><span class="dop">, 50 мкм</span></a><br>
