--- a/pages/iblock/iblock_o.htm
+++ b/pages/iblock/iblock_o.htm
@@ -1,3 +1,6 @@
+<DT>16 июл: <DD><a href="/catalog/cat139.shtml" title="Новые товары"><span class="title">Молотки слесаные</span><span class="dop"> GROSS</span></a><br>
+<DT>15 июл: <DD><a href="/catalog/cat47.shtml"  title="Новые товары"><span class="title">Буры по бетону SDS+</span><span class="dop"> UNIVERSE</span></a><br>
+<DT>15 июл: <DD><a href="/catalog/cat186.shtml"  title="Новый товар"><span class="title">Шпагат льнопеньковый</span><span class="dop"></span></a><br>
 <DT>06 июл: <DD><a href="/catalog/cat45.shtml"  title="Цены снижены"><span class="title">Электроды сварочные</span><span class="dop"> ЛЭЗ</span></a><br>
 <DT>29 июн: <DD><a href="/catalog/cat118.shtml" title="Цены снижены"><span class="title">Проволока ОК Т/О 1.2 мм</span><span class="dop"></span></a><br>
 <DT>29 июн: <DD><a href="/catalog/cat47.shtml"  title="Цены снижены"><span class="title">Буры SDS Plus</span><span class="dop"> BERGEN</span></a><br>
