--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,5 +1,6 @@
 <div id=n>
 <h2>Новинки</h2><DL>
+  <DT>25 авг : <DD><a href="/catalog/cat385.shtml" title="Расширен ассортимент"><span class="title">Измерительный инструмент</span><span class="dop"> ADA</span></a><br>
   <DT>24 авг : <DD><a href="/catalog/cat101.shtml" title="Новые товары"><span class="title">Лопаты штыковые</span><span class="dop"> TRUPER</span></a><br>
   <DT>19 авг : <DD><a href="/catalog/cat431.shtml" title="Новый товар"><span class="title">Миксер промышленный</span><span class="dop"> MAKITA</span></a><br>
   <DT>17 авг : <DD><a href="/catalog/cat313.shtml" title="Новые товары"><span class="title">Водно-дисперсионная краска</span><span class="dop"></span></a><br>
@@ -8,9 +9,6 @@
   <DT>29 июл: <DD><a href="/catalog/cat158.shtml" title="Новый товар"><span class="title">Плащ-дождевик</span><span class="dop">, 50 мкм</span></a><br>
   <DT>27 июл: <DD><a href="/catalog/cat293.shtml" title="Цены снижены"><span class="title">Распродажа буров</span><span class="dop"> SDS+</span></a><br>
   <DT>22 июл: <DD><a href="/catalog/cat265.shtml" title="Новый товар"><span class="title">Удлинитель торц.</span><span class="dop"> MATRIX</span></a><br>
-  <DT>16 июл: <DD><a href="/catalog/cat139.shtml" title="Новые товары"><span class="title">Молотки слесаные</span><span class="dop"> GROSS</span></a><br>
-  <DT>15 июл: <DD><a href="/catalog/cat47.shtml"  title="Новые товары"><span class="title">Буры по бетону SDS+</span><span class="dop"> UNIVERSE</span></a><br>
-  <DT>15 июл: <DD><a href="/catalog/cat186.shtml"  title="Новый товар"><span class="title">Шпагат льнопеньковый</span><span class="dop"></span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
 <h2>Рекомендуемые товары</h2>
