--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,5 +1,8 @@
 <div id=n>
 <h2>Новинки</h2><DL>
+  <DT>31 авг : <DD><a href="/catalog/cat112.shtml" title="Новый товар"><span class="title">Замок влагозащитный</span><span class="dop"> Булат</span></a><br>
+  <DT>27 авг : <DD><a href="/catalog/cat420.shtml" title="Расширен ассортимент"><span class="title">Свёрла по стеклу</span><span class="dop"> HAGWERT</span></a><br>
+  <DT>27 авг : <DD><a href="/catalog/cat280.shtml" title="Новые товары"><span class="title">Пилки для лобзика</span><span class="dop"> RUNEX</span></a><br>
   <DT>25 авг : <DD><a href="/catalog/cat385.shtml" title="Расширен ассортимент"><span class="title">Измерительный инструмент</span><span class="dop"> ADA</span></a><br>
   <DT>24 авг : <DD><a href="/catalog/cat101.shtml" title="Новые товары"><span class="title">Лопаты штыковые</span><span class="dop"> TRUPER</span></a><br>
   <DT>19 авг : <DD><a href="/catalog/cat431.shtml" title="Новый товар"><span class="title">Миксер промышленный</span><span class="dop"> MAKITA</span></a><br>
