--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,5 +1,6 @@
 <div id=n>
 <h2>Новинки</h2><DL>
+  <DT>01 сен: <DD><a href="/catalog/cat115.shtml" title="Расширен ассортимент"><span class="title">Скотч строительный</span><span class="dop"> TORNADO</span></a><br>
   <DT>31 авг : <DD><a href="/catalog/cat112.shtml" title="Новый товар"><span class="title">Замок влагозащитный</span><span class="dop"> Булат</span></a><br>
   <DT>27 авг : <DD><a href="/catalog/cat420.shtml" title="Расширен ассортимент"><span class="title">Свёрла по стеклу</span><span class="dop"> HAGWERT</span></a><br>
   <DT>27 авг : <DD><a href="/catalog/cat280.shtml" title="Новые товары"><span class="title">Пилки для лобзика</span><span class="dop"> RUNEX</span></a><br>
@@ -9,9 +10,6 @@
   <DT>17 авг : <DD><a href="/catalog/cat313.shtml" title="Новые товары"><span class="title">Водно-дисперсионная краска</span><span class="dop"></span></a><br>
   <DT>14 авг : <DD><a href="/catalog/cat392.shtml" title="Расширен ассортимент"><span class="title">Ножницы садовые</span><span class="dop"> TRUPER</span></a><br>
   <DT>06 авг : <DD><a href="/catalog/cat57.shtml"  title="Расширен ассортимент"><span class="title">Ножницы по металлу</span><span class="dop"> GROSS</span></a><br>
-  <DT>29 июл: <DD><a href="/catalog/cat158.shtml" title="Новый товар"><span class="title">Плащ-дождевик</span><span class="dop">, 50 мкм</span></a><br>
-  <DT>27 июл: <DD><a href="/catalog/cat293.shtml" title="Цены снижены"><span class="title">Распродажа буров</span><span class="dop"> SDS+</span></a><br>
-  <DT>22 июл: <DD><a href="/catalog/cat265.shtml" title="Новый товар"><span class="title">Удлинитель торц.</span><span class="dop"> MATRIX</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
 <h2>Рекомендуемые товары</h2>
