в прайсе не написано "узкое полотно"

--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,5 +1,6 @@
 <div id=n>
 <h2>Новинки</h2><DL>
+  <DT>08 сен: <DD><a href="/catalog/cat410.shtml" title="Новые товары"><span class="title">Сверла (металл)</span><span class="dop"> конические</span></a><br>
   <DT>01 сен: <DD><a href="/catalog/cat115.shtml" title="Расширен ассортимент"><span class="title">Скотч строительный</span><span class="dop"> TORNADO</span></a><br>
   <DT>31 авг : <DD><a href="/catalog/cat112.shtml" title="Новый товар"><span class="title">Замок влагозащитный</span><span class="dop"> Булат</span></a><br>
   <DT>27 авг : <DD><a href="/catalog/cat420.shtml" title="Расширен ассортимент"><span class="title">Свёрла по стеклу</span><span class="dop"> HAGWERT</span></a><br>
