--- a/csv/000res/resource.htm
+++ b/csv/000res/resource.htm
@@ -153,24 +153,19 @@ entry-list<
 <entry number="2">22</entry>
 <entry number="3"><aa>&laquo;&raquo;</aa></entry>
 <entry number="4"></entry>
-<entry/></entry>
-<ps>number</ps>="5"></entry>
+<entry></entry>
+<ps>number</ps>="5">
 <blockquote></blockquote>
 &r &#8
 <dp>wwwwwwww</dp>
+
+<ul><li style=""></li></ul>
 
 <div id="dd">
   <div class="tst"><span class=""><a href=""></a></span></div>
 </div>
 <div title="Hello world!"></div>
 
-<!doctype html>
-    <html lang="en-US">
-<head>
-  <meta charset="UTF-8">
-  <title></title>
-</head>
-<body>
 <div class="">
   <table>
     <tr class="w e">
@@ -185,6 +180,16 @@ entry-list<
 Lorem ipsum dolor sit amet, <span class="">
   <p><b></b>consectetur</p>
   </span> adipisicing elit. Ab consequuntur dolor dolore id, ipsum maxime officiis pariatur, quaerat velit veritatis voluptas, voluptatum.
+
+
+<!doctype html>
+<html lang="en-US">
+<head>
+  <meta charset="UTF-8">
+  <title></title>
+</head>
+<body>
+hi &lt;strong&gt;&lt;/strong&gt;
+&lt;strong&gt;&lt;/strong&gt;
 </body>
 </html>
-m11
