--- a/pages/iblock/iblock_o.htm
+++ b/pages/iblock/iblock_o.htm
@@ -1,3 +1,15 @@
+<DT>10 сен: <DD><a href="/catalog/cat270.shtml" title="Новый товар"><span class="title">Клей монтажный</span><span class="dop"> V6 92 белый</span></a><br>
+<DT>08 сен: <DD><a href="/catalog/cat410.shtml" title="Новые товары"><span class="title">Сверла (металл)</span><span class="dop"> конические</span></a><br>
+<DT>01 сен: <DD><a href="/catalog/cat115.shtml" title="Расширен ассортимент"><span class="title">Скотч строительный</span><span class="dop"> TORNADO</span></a><br>
+<DT>31 авг : <DD><a href="/catalog/cat112.shtml" title="Новый товар"><span class="title">Замок влагозащитный</span><span class="dop"> Булат</span></a><br>
+<DT>27 авг : <DD><a href="/catalog/cat420.shtml" title="Расширен ассортимент"><span class="title">Свёрла по стеклу</span><span class="dop"> HAGWERT</span></a><br>
+<DT>27 авг : <DD><a href="/catalog/cat280.shtml" title="Новые товары"><span class="title">Пилки для лобзика</span><span class="dop"> RUNEX</span></a><br>
+<DT>25 авг : <DD><a href="/catalog/cat385.shtml" title="Расширен ассортимент"><span class="title">Измерительный инструмент</span><span class="dop"> ADA</span></a><br>
+<DT>24 авг : <DD><a href="/catalog/cat101.shtml" title="Новые товары"><span class="title">Лопаты штыковые</span><span class="dop"> TRUPER</span></a><br>
+<DT>19 авг : <DD><a href="/catalog/cat431.shtml" title="Новый товар"><span class="title">Миксер промышленный</span><span class="dop"> MAKITA</span></a><br>
+<DT>17 авг : <DD><a href="/catalog/cat313.shtml" title="Новые товары"><span class="title">Водно-дисперсионная краска</span><span class="dop"></span></a><br>
+<DT>14 авг : <DD><a href="/catalog/cat392.shtml" title="Расширен ассортимент"><span class="title">Ножницы садовые</span><span class="dop"> TRUPER</span></a><br>
+<DT>06 авг : <DD><a href="/catalog/cat57.shtml"  title="Расширен ассортимент"><span class="title">Ножницы по металлу</span><span class="dop"> GROSS</span></a><br>
 <DT>29 июл: <DD><a href="/catalog/cat158.shtml" title="Новый товар"><span class="title">Плащ-дождевик</span><span class="dop">, 50 мкм</span></a><br>
 <DT>27 июл: <DD><a href="/catalog/cat293.shtml" title="Цены снижены"><span class="title">Распродажа буров</span><span class="dop"> SDS+</span></a><br>
 <DT>22 июл: <DD><a href="/catalog/cat265.shtml" title="Новый товар"><span class="title">Удлинитель торц.</span><span class="dop"> MATRIX</span></a><br>
