--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,17 +1,22 @@
 <div id=n>
 <h2>Новинки</h2><DL>
-  <DT>10 сен: <DD><a href="/catalog/cat270.shtml" title="Новый товар"><span class="title">Клей монтажный</span><span class="dop"> V6 92 декор белый</span></a><br>
-  <DT>08 сен: <DD><a href="/catalog/cat410.shtml" title="Новые товары"><span class="title">Сверла (металл)</span><span class="dop"> конические</span></a><br>
-  <DT>01 сен: <DD><a href="/catalog/cat115.shtml" title="Расширен ассортимент"><span class="title">Скотч строительный</span><span class="dop"> TORNADO</span></a><br>
-  <DT>31 авг : <DD><a href="/catalog/cat112.shtml" title="Новый товар"><span class="title">Замок влагозащитный</span><span class="dop"> Булат</span></a><br>
-  <DT>27 авг : <DD><a href="/catalog/cat420.shtml" title="Расширен ассортимент"><span class="title">Свёрла по стеклу</span><span class="dop"> HAGWERT</span></a><br>
-  <DT>27 авг : <DD><a href="/catalog/cat280.shtml" title="Новые товары"><span class="title">Пилки для лобзика</span><span class="dop"> RUNEX</span></a><br>
-  <DT>25 авг : <DD><a href="/catalog/cat385.shtml" title="Расширен ассортимент"><span class="title">Измерительный инструмент</span><span class="dop"> ADA</span></a><br>
-  <DT>24 авг : <DD><a href="/catalog/cat101.shtml" title="Новые товары"><span class="title">Лопаты штыковые</span><span class="dop"> TRUPER</span></a><br>
-  <DT>19 авг : <DD><a href="/catalog/cat431.shtml" title="Новый товар"><span class="title">Миксер промышленный</span><span class="dop"> MAKITA</span></a><br>
-  <DT>17 авг : <DD><a href="/catalog/cat313.shtml" title="Новые товары"><span class="title">Водно-дисперсионная краска</span><span class="dop"></span></a><br>
-  <DT>14 авг : <DD><a href="/catalog/cat392.shtml" title="Расширен ассортимент"><span class="title">Ножницы садовые</span><span class="dop"> TRUPER</span></a><br>
-  <DT>06 авг : <DD><a href="/catalog/cat57.shtml"  title="Расширен ассортимент"><span class="title">Ножницы по металлу</span><span class="dop"> GROSS</span></a><br>
+  <DT>26 окт: <DD><a href="/catalog/cat441.shtml" title="Новые товары"><span class="title">Дюбели для теплоизоляции</span><span class="dop"> &laquo;грибки&raquo;</span></a><br>
+  <DT>23 окт: <DD><a href="/catalog/cat99.shtml"  title="Новые товары"><span class="title">Электроинструмент</span><span class="dop"> Интерскол:</span></a><br>
+  &emsp;&emsp;&emsp;
+  <a href="/catalog/cat198.shtml" title="Новые товары"><span class="title">УШМ</span></a>,
+  <a href="/catalog/cat199.shtml" title="Новый товар"><span class="title">Перфоратор</span></a>,
+  <a href="/catalog/cat201.shtml" title="Новый товар"><span class="title">Аккум.дрель</span></a><br>
+  <DT>22 окт: <DD><a href="/catalog/cat45.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title" style="color: #ff00cc; font-size: larger">Электроды</span><span class="dop"> &laquo;СпецЭлектрод&raquo;</span></a><br>
+  <DT>21 окт: <DD><a href="/catalog/cat189.shtml" title="Новые товары"><span class="title">Чашки зачистные алмазные</span><span class="dop"> SPIN</span></a><br>
+  <DT>20 окт: <DD><a href="/catalog/cat188.shtml" title="Новый товар"><span class="title">Степлер и скобы</span><span class="dop"> тип 140, MiLES</span></a><br>
+  <DT>15 окт: <DD><a href="/catalog/cat376.shtml" title="Новый товар"><span class="title">Маслянный радиатор</span><span class="dop"> TIMBERK</span></a><br>
+  <DT>05 окт: <DD><a href="/catalog/cat117.shtml" title="Новый товар"><span class="title">Плёнка п/э</span><span class="dop"> GOLDEN MESH</span></a><br>
+  <DT>02 окт: <DD><a href="/catalog/cat178.shtml" title="Новые товары"><span class="title">Сетка стеклотканевая фасадная</span><span class="dop"></span></a><br>
+  <DT>30 сен: <DD><a href="/catalog/cat207.shtml" title="Новый товар"><span class="title">Аварийное ограждение</span><span class="dop"> (сетка)</span></a><br>
+  <DT>25 сен: <DD><a href="/catalog/cat227.shtml" title="Расширен ассортимент"><span class="title">Фонари светодиодные</span><span class="dop"> STERN</span></a><br>
+  <DT>25 сен: <DD><a href="/catalog/cat138.shtml" title="Новые товары"><span class="title">Кувалды кованые</span><span class="dop"> SPARTA</span></a><br>
+  <DT>24 сен: <DD><a href="/catalog/cat247.shtml" title="Расширен ассортимент"><span class="title">Наборы изолированного инстр.</span><span class="dop"></span></a><br>
+  <DT>22 сен: <DD><a href="/catalog/cat115.shtml" title="Цены снижены"><span class="title">Скотчи строительные</span><span class="dop"></span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
 <h2>Рекомендуемые товары</h2>
