--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,8 +1,13 @@
 <div id=n>
 <h2>Новинки</h2><DL>
-  <DT>26 окт: <DD><a href="/catalog/cat441.shtml" title="Новые товары"><span class="title">Дюбели для теплоизоляции</span><span class="dop"> &laquo;грибки&raquo;</span></a><br>
-  <DT>23 окт: <DD><a href="/catalog/cat99.shtml"  title="Новые товары"><span class="title">Электроинструмент</span><span class="dop"> Интерскол:</span></a><br>
-  &emsp;&emsp;&emsp;
+  <DT>16 ноя: <DD><a href="/catalog/cat247.shtml" title="Расширен ассортимент"><span class="title">Наборы инструментов</span><span class="dop"></span></a><br>
+  <DT>06 ноя: <DD><a href="/catalog/cat84.shtml"  title="Расширен ассортимент"><span class="title">Ключи трубные</span><span class="dop"> GROSS</span></a><br>
+  <DT>06 ноя: <DD><a href="/catalog/cat77.shtml"  title="Новые товары"><span class="title">Наборы свёрел (металл)</span><span class="dop"> HARDAX</span></a><br>
+  <DT>05 ноя: <DD><a href="/catalog/cat57.shtml"  title="Новый товар"><span class="title">Ножницы по металлу</span><span class="dop"> HARDAX</span></a><br>
+  <DT>02 ноя: <DD><a href="/catalog/cat417.shtml" title="Расширен ассортимент"><span class="title">Сверла (металл)</span><span class="dop"> удлинённые</span></a><br>
+  <DT>30 окт: <DD><a href="/catalog/cat329.shtml" title="Расширен ассортимент"><span class="title">Биты</span><span class="dop"> PHILLIPS</span></a><br>
+  <DT>26 окт: <DD><a href="/catalog/cat441.shtml" title="Новые товары"><span class="title">Дюбели для теплоизол.</span><span class="dop"> &laquo;грибки&raquo;</span></a><br>
+  <DT>23 окт: <DD><a href="/catalog/cat99.shtml"  title="Новые товары"><span class="title">Электроинструмент</span><span class="dop"> Интерскол:</span></a><br>&emsp;&emsp;&emsp;
   <a href="/catalog/cat198.shtml" title="Новые товары"><span class="title">УШМ</span></a>,
   <a href="/catalog/cat199.shtml" title="Новый товар"><span class="title">Перфоратор</span></a>,
   <a href="/catalog/cat201.shtml" title="Новый товар"><span class="title">Аккум.дрель</span></a><br>
@@ -10,13 +15,6 @@
   <DT>21 окт: <DD><a href="/catalog/cat189.shtml" title="Новые товары"><span class="title">Чашки зачистные алмазные</span><span class="dop"> SPIN</span></a><br>
   <DT>20 окт: <DD><a href="/catalog/cat188.shtml" title="Новый товар"><span class="title">Степлер и скобы</span><span class="dop"> тип 140, MiLES</span></a><br>
   <DT>15 окт: <DD><a href="/catalog/cat376.shtml" title="Новый товар"><span class="title">Маслянный радиатор</span><span class="dop"> TIMBERK</span></a><br>
-  <DT>05 окт: <DD><a href="/catalog/cat117.shtml" title="Новый товар"><span class="title">Плёнка п/э</span><span class="dop"> GOLDEN MESH</span></a><br>
-  <DT>02 окт: <DD><a href="/catalog/cat178.shtml" title="Новые товары"><span class="title">Сетка стеклотканевая фасадная</span><span class="dop"></span></a><br>
-  <DT>30 сен: <DD><a href="/catalog/cat207.shtml" title="Новый товар"><span class="title">Аварийное ограждение</span><span class="dop"> (сетка)</span></a><br>
-  <DT>25 сен: <DD><a href="/catalog/cat227.shtml" title="Расширен ассортимент"><span class="title">Фонари светодиодные</span><span class="dop"> STERN</span></a><br>
-  <DT>25 сен: <DD><a href="/catalog/cat138.shtml" title="Новые товары"><span class="title">Кувалды кованые</span><span class="dop"> SPARTA</span></a><br>
-  <DT>24 сен: <DD><a href="/catalog/cat247.shtml" title="Расширен ассортимент"><span class="title">Наборы изолированного инстр.</span><span class="dop"></span></a><br>
-  <DT>22 сен: <DD><a href="/catalog/cat115.shtml" title="Цены снижены"><span class="title">Скотчи строительные</span><span class="dop"></span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
 <h2>Рекомендуемые товары</h2>
