--- a/pages/iblock/iblock_o.htm
+++ b/pages/iblock/iblock_o.htm
@@ -1,3 +1,10 @@
+<DT>25 сен: <DD><a href="/catalog/cat227.shtml" title="Расширен ассортимент"><span class="title">Фонари светодиодные</span><span class="dop"> STERN</span></a><br>
+<DT>25 сен: <DD><a href="/catalog/cat138.shtml" title="Новые товары"><span class="title">Кувалды кованые</span><span class="dop"> SPARTA</span></a><br>
+<DT>24 сен: <DD><a href="/catalog/cat247.shtml" title="Расширен ассортимент"><span class="title">Наборы изолированного инстр.</span><span class="dop"></span></a><br>
+<DT>22 сен: <DD><a href="/catalog/cat115.shtml" title="Цены снижены"><span class="title">Скотчи строительные</span><span class="dop"></span></a><br>
+<DT>05 окт: <DD><a href="/catalog/cat117.shtml" title="Новый товар"><span class="title">Плёнка п/э</span><span class="dop"> GOLDEN MESH</span></a><br>
+<DT>02 окт: <DD><a href="/catalog/cat178.shtml" title="Новые товары"><span class="title">Сетка стеклотканевая фасадная</span><span class="dop"></span></a><br>
+<DT>30 сен: <DD><a href="/catalog/cat207.shtml" title="Новый товар"><span class="title">Аварийное ограждение</span><span class="dop"> (сетка)</span></a><br>
 <DT>10 сен: <DD><a href="/catalog/cat270.shtml" title="Новый товар"><span class="title">Клей монтажный</span><span class="dop"> V6 92 белый</span></a><br>
 <DT>08 сен: <DD><a href="/catalog/cat410.shtml" title="Новые товары"><span class="title">Сверла (металл)</span><span class="dop"> конические</span></a><br>
 <DT>01 сен: <DD><a href="/catalog/cat115.shtml" title="Расширен ассортимент"><span class="title">Скотч строительный</span><span class="dop"> TORNADO</span></a><br>
