--- a/csv/000res/xref.htm
+++ b/csv/000res/xref.htm
@@ -101,6 +101,10 @@
   <tr><td><a href="/catalog/cat201.shtml"><img src="/img/pic/elka/small/Makita_dr.png" width="98" height="70" alt="" /></a></td>
     <td class="txt"><a href="/catalog/cat201.shtml">Шуруповерты</a></td>
     <td class="arrow"><a href="/catalog/cat201.shtml"><img width="20" height="30" src="/img/1pix.gif" alt=""></a></td>
+  </tr></table><table cellpadding="0" class="cblock">
+  <tr><td><a href="/catalog/cat329.shtml"><img src="/img/pic/krep/small/PH.jpg" width="98" height="70" alt="Биты PHILLIPS" /></a></td>
+    <td class="txt"><a href="/catalog/cat329.shtml">Биты PHILLIPS</a></td>
+    <td class="arrow"><a href="/catalog/cat329.shtml"><img width="20" height="30" src="/img/1pix.gif" alt="" /></a></td>
   </tr></table></div>
 <div class="ref"><table cellpadding="0" class="cblock">
   <tr><td><a href="/catalog/cat202.shtml"><img src="/img/pic/elka/small/Makita_lobz.png" width="98" height="70" alt="" /></a></td>
@@ -138,7 +142,11 @@
     <td class="arrow"><a href="/catalog/cat183.shtml"><img width="20" height="30" src="/img/1pix.gif" alt=""></a></td>
   </tr></table></div>
 ==============================
-<div class="ref"></div>
+<div class="ref"><table cellpadding="0" class="cblock">
+  <tr><td><a href="/catalog/cat329.shtml"><img src="/img/pic/krep/small/PH.jpg" width="98" height="70" alt="Биты PHILLIPS" /></a></td>
+    <td class="txt"><a href="/catalog/cat329.shtml">Биты PHILLIPS</a></td>
+    <td class="arrow"><a href="/catalog/cat329.shtml"><img width="20" height="30" src="/img/1pix.gif" alt="" /></a></td>
+  </tr></table></div>
 ==============================
 <div class="ref"></div>
 ==============================
