--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,6 +1,7 @@
 <div id=n>
 <h2>Новинки</h2><DL>
   <DT>16 ноя: <DD><a href="/catalog/cat247.shtml" title="Расширен ассортимент"><span class="title">Наборы инструментов</span><span class="dop"></span></a><br>
+  <DT>11 ноя: <DD><a href="/catalog/cat444.shtml" title="Новые товары"><span class="title">Саморезы кровельные</span><span class="dop"></span></a><br>
   <DT>06 ноя: <DD><a href="/catalog/cat84.shtml"  title="Расширен ассортимент"><span class="title">Ключи трубные</span><span class="dop"> GROSS</span></a><br>
   <DT>06 ноя: <DD><a href="/catalog/cat77.shtml"  title="Новые товары"><span class="title">Наборы свёрел (металл)</span><span class="dop"> HARDAX</span></a><br>
   <DT>05 ноя: <DD><a href="/catalog/cat57.shtml"  title="Новый товар"><span class="title">Ножницы по металлу</span><span class="dop"> HARDAX</span></a><br>
