--- a/pages/iblock/iblock_o.htm
+++ b/pages/iblock/iblock_o.htm
@@ -1,3 +1,12 @@
+<DT>30 окт: <DD><a href="/catalog/cat329.shtml" title="Расширен ассортимент"><span class="title">Биты</span><span class="dop"> PHILLIPS</span></a><br>
+<DT>26 окт: <DD><a href="/catalog/cat441.shtml" title="Новые товары"><span class="title">Дюбели для теплоизол.</span><span class="dop"> &laquo;грибки&raquo;</span></a><br>
+<DT>23 окт: <DD><a href="/catalog/cat99.shtml"  title="Новые товары"><span class="title">Электроинструмент</span><span class="dop"> Интерскол:</span></a><br>&emsp;&emsp;&emsp;
+  <a href="/catalog/cat198.shtml" title="Новые товары"><span class="title">УШМ</span></a>,
+  <a href="/catalog/cat199.shtml" title="Новый товар"><span class="title">Перфоратор</span></a>,
+  <a href="/catalog/cat201.shtml" title="Новый товар"><span class="title">Аккум.дрель</span></a><br>
+<DT>21 окт: <DD><a href="/catalog/cat189.shtml" title="Новые товары"><span class="title">Чашки зачистные алмазные</span><span class="dop"> SPIN</span></a><br>
+<DT>20 окт: <DD><a href="/catalog/cat188.shtml" title="Новый товар"><span class="title">Степлер и скобы</span><span class="dop"> тип 140, MiLES</span></a><br>
+<DT>15 окт: <DD><a href="/catalog/cat376.shtml" title="Новый товар"><span class="title">Маслянный радиатор</span><span class="dop"> TIMBERK</span></a><br>
 <DT>25 сен: <DD><a href="/catalog/cat227.shtml" title="Расширен ассортимент"><span class="title">Фонари светодиодные</span><span class="dop"> STERN</span></a><br>
 <DT>25 сен: <DD><a href="/catalog/cat138.shtml" title="Новые товары"><span class="title">Кувалды кованые</span><span class="dop"> SPARTA</span></a><br>
 <DT>24 сен: <DD><a href="/catalog/cat247.shtml" title="Расширен ассортимент"><span class="title">Наборы изолированного инстр.</span><span class="dop"></span></a><br>
