--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,21 +1,17 @@
 <div id=n>
 <h2>Новинки</h2><DL>
-  <DT>16 ноя: <DD><a href="/catalog/cat247.shtml" title="Расширен ассортимент"><span class="title">Наборы инструментов</span><span class="dop"></span></a><br>
+  <DT>10 дек: <DD><a href="/catalog/cat172.shtml" title="Новые товары"><span class="title">Коронки по бетону</span><span class="dop"> HAGWERT</span></a><br>
+  <DT>09 дек: <DD><a href="/catalog/cat264.shtml" title="Новый товар"><span class="title">Маска электросварщика</span><span class="dop"> SiB</span></a><br>
+  <DT>25 ноя: <DD><a href="/catalog/cat247.shtml" title="Расширен ассортимент"><span class="title">Наборы инструментов</span><span class="dop"> НИЗ</span></a><br>
+  <DT>24 ноя: <DD><a href="/catalog/cat47.shtml"  title="Новые товары"><span class="title">Буры по бетону SDS+</span><span class="dop"> OPTIM</span></a><br>
+  <DT>19 ноя: <DD><a href="/catalog/cat219.shtml" title="Новый товар"><span class="title">Плиткорез рельсовый</span><span class="dop"> MATRIX</span></a><br>
+  <DT>19 ноя: <DD><a href="/catalog/cat259.shtml" title="Новый товар"><span class="title">Набор отверток</span><span class="dop"> SPARTA</span></a><br>
   <DT>11 ноя: <DD><a href="/catalog/cat444.shtml" title="Новые товары"><span class="title">Саморезы кровельные</span><span class="dop"></span></a><br>
   <DT>06 ноя: <DD><a href="/catalog/cat84.shtml"  title="Расширен ассортимент"><span class="title">Ключи трубные</span><span class="dop"> GROSS</span></a><br>
   <DT>06 ноя: <DD><a href="/catalog/cat77.shtml"  title="Новые товары"><span class="title">Наборы свёрел (металл)</span><span class="dop"> HARDAX</span></a><br>
   <DT>05 ноя: <DD><a href="/catalog/cat57.shtml"  title="Новый товар"><span class="title">Ножницы по металлу</span><span class="dop"> HARDAX</span></a><br>
   <DT>02 ноя: <DD><a href="/catalog/cat417.shtml" title="Расширен ассортимент"><span class="title">Сверла (металл)</span><span class="dop"> удлинённые</span></a><br>
-  <DT>30 окт: <DD><a href="/catalog/cat329.shtml" title="Расширен ассортимент"><span class="title">Биты</span><span class="dop"> PHILLIPS</span></a><br>
-  <DT>26 окт: <DD><a href="/catalog/cat441.shtml" title="Новые товары"><span class="title">Дюбели для теплоизол.</span><span class="dop"> &laquo;грибки&raquo;</span></a><br>
-  <DT>23 окт: <DD><a href="/catalog/cat99.shtml"  title="Новые товары"><span class="title">Электроинструмент</span><span class="dop"> Интерскол:</span></a><br>&emsp;&emsp;&emsp;
-  <a href="/catalog/cat198.shtml" title="Новые товары"><span class="title">УШМ</span></a>,
-  <a href="/catalog/cat199.shtml" title="Новый товар"><span class="title">Перфоратор</span></a>,
-  <a href="/catalog/cat201.shtml" title="Новый товар"><span class="title">Аккум.дрель</span></a><br>
   <DT>22 окт: <DD><a href="/catalog/cat45.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title" style="color: #ff00cc; font-size: larger">Электроды</span><span class="dop"> &laquo;СпецЭлектрод&raquo;</span></a><br>
-  <DT>21 окт: <DD><a href="/catalog/cat189.shtml" title="Новые товары"><span class="title">Чашки зачистные алмазные</span><span class="dop"> SPIN</span></a><br>
-  <DT>20 окт: <DD><a href="/catalog/cat188.shtml" title="Новый товар"><span class="title">Степлер и скобы</span><span class="dop"> тип 140, MiLES</span></a><br>
-  <DT>15 окт: <DD><a href="/catalog/cat376.shtml" title="Новый товар"><span class="title">Маслянный радиатор</span><span class="dop"> TIMBERK</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
 <h2>Рекомендуемые товары</h2>
