--- a/csv/000res/resource.htm
+++ b/csv/000res/resource.htm
@@ -193,3 +193,17 @@ hi &lt;strong&gt;&lt;/strong&gt;
 &lt;strong&gt;&lt;/strong&gt;
 </body>
 </html>
+                 at I ha ve at <b></b> bl <a href=""></a> <a href=""> </a> <a  href="qq"></a>
+<a href="qqq"></a> <a  href="w"></a> <b></b>
+ 0|&#8199;8 &#215;&#8199;300 μμ, MATRIX |293|71038   | 68,64||
+<!-- >text1|&#215;,&nbsp;&nbsp;text2<-->
+      text1|&#215;,&nbsp;&nbsp;text2
+      0,&nbsp;
+
+  12&z3456789012345678901234567890&n &qprime;
+&&nbsp; &ensp; &&nacute; &&negativemediumspace; &numsp;
+qq qqq &ensp;
+&ensp; &ensp;
+&nbsp;
+<a href="q"></a>
+&nbsp2; &n co &mdash; z
