info.shtml &mdash; 2

--- a/csv/000res/resource.htm
+++ b/csv/000res/resource.htm
@@ -200,10 +200,10 @@ hi &lt;strong&gt;&lt;/strong&gt;
       text1|&#215;,&nbsp;&nbsp;text2
       0,&nbsp;
 
-  12&z3456789012345678901234567890&n &qprime;
+  12&z3456789012345678901234567890&n &qprime;                       19.12.15-14:31:54
 &&nbsp; &ensp; &&nacute; &&negativemediumspace; &numsp;
 qq qqq &ensp;
-&ensp; &ensp;
+&ensp; &ensp;                                &ZeroWidthSpace;&numsp;
 &nbsp;
 <a href="q"></a>
 &nbsp2; &n co &mdash; z
