--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,5 +1,6 @@
 <div id=n>
 <h2>Новинки</h2><DL>
+  <DT>23 дек: <DD><a href="/catalog/cat192.shtml" title="Новый товар"><span class="title">Пистолет д/герметика</span><span class="dop"> "Tube Long"</span></a><br>
   <DT>10 дек: <DD><a href="/catalog/cat172.shtml" title="Новые товары"><span class="title">Коронки по бетону</span><span class="dop"> HAGWERT</span></a><br>
   <DT>09 дек: <DD><a href="/catalog/cat264.shtml" title="Новый товар"><span class="title">Маска электросварщика</span><span class="dop"> SiB</span></a><br>
   <DT>25 ноя: <DD><a href="/catalog/cat247.shtml" title="Расширен ассортимент"><span class="title">Наборы инструментов</span><span class="dop"> НИЗ</span></a><br>
