--- a/csv/000res/resource.htm
+++ b/csv/000res/resource.htm
@@ -200,7 +200,7 @@ hi &lt;strong&gt;&lt;/strong&gt;
       text1|&#215;,&nbsp;&nbsp;text2
       0,&nbsp;
 
-  12&z3456789012345678901234567890&n &qprime;                       19.12.15-14:31:54
+  12&z345 &nbsp;6789012345678901234567890&n &qprime;                       19.12.15-14:31:54
 &&nbsp; &ensp; &&nacute; &&negativemediumspace; &numsp;
 qq qqq &ensp;
 &ensp; &ensp;                                &ZeroWidthSpace;&numsp;
