--- a/pages/iblock/iblock_o.htm
+++ b/pages/iblock/iblock_o.htm
@@ -1,3 +1,10 @@
+<DT>19 ноя: <DD><a href="/catalog/cat219.shtml" title="Новый товар"><span class="title">Плиткорез рельсовый</span><span class="dop"> MATRIX</span></a><br>
+<DT>19 ноя: <DD><a href="/catalog/cat259.shtml" title="Новый товар"><span class="title">Набор отверток</span><span class="dop"> SPARTA</span></a><br>
+<DT>11 ноя: <DD><a href="/catalog/cat444.shtml" title="Новые товары"><span class="title">Саморезы кровельные</span><span class="dop"></span></a><br>
+<DT>06 ноя: <DD><a href="/catalog/cat84.shtml"  title="Расширен ассортимент"><span class="title">Ключи трубные</span><span class="dop"> GROSS</span></a><br>
+<DT>06 ноя: <DD><a href="/catalog/cat77.shtml"  title="Новые товары"><span class="title">Наборы свёрел (металл)</span><span class="dop"> HARDAX</span></a><br>
+<DT>05 ноя: <DD><a href="/catalog/cat57.shtml"  title="Новый товар"><span class="title">Ножницы по металлу</span><span class="dop"> HARDAX</span></a><br>
+<DT>02 ноя: <DD><a href="/catalog/cat417.shtml" title="Расширен ассортимент"><span class="title">Сверла (металл)</span><span class="dop"> удлинённые</span></a><br>
 <DT>30 окт: <DD><a href="/catalog/cat329.shtml" title="Расширен ассортимент"><span class="title">Биты</span><span class="dop"> PHILLIPS</span></a><br>
 <DT>26 окт: <DD><a href="/catalog/cat441.shtml" title="Новые товары"><span class="title">Дюбели для теплоизол.</span><span class="dop"> &laquo;грибки&raquo;</span></a><br>
 <DT>23 окт: <DD><a href="/catalog/cat99.shtml"  title="Новые товары"><span class="title">Электроинструмент</span><span class="dop"> Интерскол:</span></a><br>&emsp;&emsp;&emsp;
