--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,17 +1,13 @@
 <div id=n>
 <h2>Новинки</h2><DL>
-  <DT>23 дек: <DD><a href="/catalog/cat192.shtml" title="Новый товар"><span class="title">Пистолет д/герметика</span><span class="dop"> "Tube Long"</span></a><br>
+  <DT>18 янв: <DD><a href="/catalog/cat278.shtml" title="Новый товар"><span class="title">Кабель силовой</span><span class="dop"> ВВГнг-LS-П</span></a><br>
+  <DT>15 янв: <DD><a href="/catalog/cat86.shtml"  title="Новый товар"><span class="title">Перчатки</span><span class="dop"> с латексным покр.</span></a><br>
+  <DT>14 янв: <DD><a href="/catalog/cat72.shtml"  title="Расширен ассортимент"><span class="title">Рулетки</span><span class="dop"> METRIC и HOBBI</span></a><br>
+  <DT>23 дек: <DD><a href="/catalog/cat192.shtml" title="Новый товар"><span class="title">Пистолет/герметик</span><span class="dop"> "TubeLong"</span></a><br>
   <DT>10 дек: <DD><a href="/catalog/cat172.shtml" title="Новые товары"><span class="title">Коронки по бетону</span><span class="dop"> HAGWERT</span></a><br>
   <DT>09 дек: <DD><a href="/catalog/cat264.shtml" title="Новый товар"><span class="title">Маска электросварщика</span><span class="dop"> SiB</span></a><br>
   <DT>25 ноя: <DD><a href="/catalog/cat247.shtml" title="Расширен ассортимент"><span class="title">Наборы инструментов</span><span class="dop"> НИЗ</span></a><br>
   <DT>24 ноя: <DD><a href="/catalog/cat293.shtml" title="Новые товары"><span class="title">Буры по бетону SDS+</span><span class="dop"> OPTIM</span></a><br>
-  <DT>19 ноя: <DD><a href="/catalog/cat219.shtml" title="Новый товар"><span class="title">Плиткорез рельсовый</span><span class="dop"> MATRIX</span></a><br>
-  <DT>19 ноя: <DD><a href="/catalog/cat259.shtml" title="Новый товар"><span class="title">Набор отверток</span><span class="dop"> SPARTA</span></a><br>
-  <DT>11 ноя: <DD><a href="/catalog/cat444.shtml" title="Новые товары"><span class="title">Саморезы кровельные</span><span class="dop"></span></a><br>
-  <DT>06 ноя: <DD><a href="/catalog/cat84.shtml"  title="Расширен ассортимент"><span class="title">Ключи трубные</span><span class="dop"> GROSS</span></a><br>
-  <DT>06 ноя: <DD><a href="/catalog/cat77.shtml"  title="Новые товары"><span class="title">Наборы свёрел (металл)</span><span class="dop"> HARDAX</span></a><br>
-  <DT>05 ноя: <DD><a href="/catalog/cat57.shtml"  title="Новый товар"><span class="title">Ножницы по металлу</span><span class="dop"> HARDAX</span></a><br>
-  <DT>02 ноя: <DD><a href="/catalog/cat417.shtml" title="Расширен ассортимент"><span class="title">Сверла (металл)</span><span class="dop"> удлинённые</span></a><br>
   <DT>22 окт: <DD><a href="/catalog/cat45.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title" style="color: #ff00cc; font-size: larger">Электроды</span><span class="dop"> &laquo;СпецЭлектрод&raquo;</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
