--- a/pages/iblock/iblock_o.htm
+++ b/pages/iblock/iblock_o.htm
@@ -1,3 +1,7 @@
+<DT>10 дек: <DD><a href="/catalog/cat172.shtml" title="Новые товары"><span class="title">Коронки по бетону</span><span class="dop"> HAGWERT</span></a><br>
+<DT>09 дек: <DD><a href="/catalog/cat264.shtml" title="Новый товар"><span class="title">Маска электросварщика</span><span class="dop"> SiB</span></a><br>
+<DT>25 ноя: <DD><a href="/catalog/cat247.shtml" title="Расширен ассортимент"><span class="title">Наборы инструментов</span><span class="dop"> НИЗ</span></a><br>
+<DT>24 ноя: <DD><a href="/catalog/cat293.shtml" title="Новые товары"><span class="title">Буры по бетону SDS+</span><span class="dop"> OPTIM</span></a><br>
 <DT>19 ноя: <DD><a href="/catalog/cat219.shtml" title="Новый товар"><span class="title">Плиткорез рельсовый</span><span class="dop"> MATRIX</span></a><br>
 <DT>19 ноя: <DD><a href="/catalog/cat259.shtml" title="Новый товар"><span class="title">Набор отверток</span><span class="dop"> SPARTA</span></a><br>
 <DT>11 ноя: <DD><a href="/catalog/cat444.shtml" title="Новые товары"><span class="title">Саморезы кровельные</span><span class="dop"></span></a><br>
