--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,5 +1,7 @@
 <div id=n>
 <h2>Новинки</h2><DL>
+  <DT>05 фев: <DD><a href="/catalog/cat206.shtml" title="Новые товары"><span class="title">Молотки-гвоздодеры</span><span class="dop"> SiB</span></a><br>
+  <DT>05 фев: <DD><a href="/catalog/cat220.shtml" title="Новый товар"><span class="title">Лампа галогенная</span><span class="dop"> ЛИСМА</span></a><br>
   <DT>29 янв: <DD><a href="/catalog/cat448.shtml" title="Новые товары"><span class="title">Сверл. патроны и переходники</span><span class="dop"></span></a><br>
   <DT>29 янв: <DD><a href="/catalog/cat447.shtml" title="Новые товары"><span class="title">Наборы надфилей</span><span class="dop"> MATRIX</span></a><br>
   <DT>28 янв: <DD><a href="/catalog/cat446.shtml" title="Новые товары"><span class="title">Мультиспрей "5 в 1"</span><span class="dop"> ZIGGER</span></a><br>
