--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,15 +1,20 @@
 <div id=n>
 <h2>Новинки</h2><DL>
-  <DT>05 фев: <DD><a href="/catalog/cat206.shtml" title="Новые товары"><span class="title">Молотки-гвоздодеры</span><span class="dop"> SiB</span></a><br>
-  <DT>05 фев: <DD><a href="/catalog/cat220.shtml" title="Новый товар"><span class="title">Лампа галогенная</span><span class="dop"> ЛИСМА</span></a><br>
-  <DT>29 янв: <DD><a href="/catalog/cat448.shtml" title="Новые товары"><span class="title">Сверл. патроны и переходники</span><span class="dop"></span></a><br>
-  <DT>29 янв: <DD><a href="/catalog/cat447.shtml" title="Новые товары"><span class="title">Наборы надфилей</span><span class="dop"> MATRIX</span></a><br>
-  <DT>28 янв: <DD><a href="/catalog/cat446.shtml" title="Новые товары"><span class="title">Мультиспрей "5 в 1"</span><span class="dop"> ZIGGER</span></a><br>
-  <DT>18 янв: <DD><a href="/catalog/cat278.shtml" title="Новый товар"><span class="title">Кабель силовой</span><span class="dop"> ВВГнг-LS-П</span></a><br>
-  <DT>15 янв: <DD><a href="/catalog/cat86.shtml"  title="Новый товар"><span class="title">Перчатки</span><span class="dop"> с латексным покр.</span></a><br>
-  <DT>14 янв: <DD><a href="/catalog/cat72.shtml"  title="Расширен ассортимент"><span class="title">Рулетки</span><span class="dop"> METRIC и HOBBI</span></a><br>
-  <DT>23 дек: <DD><a href="/catalog/cat192.shtml" title="Новый товар"><span class="title">Пистолет/герметик</span><span class="dop"> "TubeLong"</span></a><br>
-  <DT>22 окт: <DD><a href="/catalog/cat45.shtml"  title="Цены ЗНАЧИТЕЛЬНО снижены"><span class="title" style="color: #ff00cc; font-size: larger">Электроды</span><span class="dop"> &laquo;СпецЭлектрод&raquo;</span></a><br>
+  <DT>14 мар: <DD><a href="/catalog/cat137.shtml" title="Новые товары"><span class="title">Топоры-колуны</span><span class="dop"> БАРС</span></a><br>
+  <DT>14 мар: <DD><a href="/catalog/cat392.shtml" title="Новый товар"><span class="title">Ножницы газонные</span><span class="dop"> PALISAD</span></a><br>
+  <DT>11 мар: <DD><a href="/catalog/cat244.shtml" title="Новые товары"><span class="title">Штангенциркули</span><span class="dop"> HOBBI</span></a><br>
+  <DT>03 мар: <DD><a href="/catalog/cat424.shtml" title="Снижены цены на три вида валиков"><span class="title">Малярные валики:</span><span class="dop"></span></a><br>&emsp;&emsp;&emsp;
+  <a href="/catalog/cat142.shtml" title="Цены снижены"><span class="title">Termofusion</span></a>,
+  <a href="/catalog/cat147.shtml" title="Цены снижены"><span class="title">Грейтекс</span></a>,
+  <a href="/catalog/cat145.shtml" title="Цены снижены"><span class="title">Cинтекс</span></a><br>
+  <DT>02 мар: <DD><a href="/catalog/cat206.shtml" title="Расширен ассортимент"><span class="title">Молотки-гвоздодеры</span><span class="dop"> TRUPER</span></a><br>
+  <DT>01 мар: <DD><a href="/catalog/cat451.shtml" title="Новый товар"><span class="title">Набор садового инстр.</span><span class="dop"> TRUPER</span></a><br>
+  <DT>29 фев: <DD><a href="/catalog/cat128.shtml" title="Цены снижены"><span class="title">Ножовки по дереву</span><span class="dop"> HARDAX</span></a><br>
+  <DT>26 фев: <DD><a href="/catalog/cat295.shtml" title="Цены снижены"><span class="title">Краски аэрозольные</span><span class="dop"></span></a><br>
+  <DT>25 фев: <DD><a href="/catalog/cat273.shtml" title="Новый товар"><span class="title">Лампа местного освещения</span><span class="dop"> 36V</span></a><br>
+  <DT>16 фев: <DD><a href="/catalog/cat139.shtml" title="Новые товары"><span class="title">Молотки слесарные</span><span class="dop"> HARDAX</span></a><br>
+  <DT>15 фев: <DD><a href="/catalog/cat373.shtml" title="Новые товары"><span class="title">Грабли веерные</span><span class="dop"> PALISAD</span></a><br>
+  <DT>15 фев: <DD><a href="/catalog/cat175.shtml" title="Новый товар"><span class="title">Пена монтажная</span><span class="dop"> HENKEL</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
 <h2>Рекомендуемые товары</h2>
