Live with 1/2 of power

--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,5 +1,6 @@
 <div id=n>
 <h2>Новинки</h2><DL>
+  <DT>15 мар: <DD><a href="/catalog/cat115.shtml" title="Цены снижены"><span class="title">Сетка (лента)</span><span class="dop"> "серпянка"</span></a><br>
   <DT>14 мар: <DD><a href="/catalog/cat137.shtml" title="Новые товары"><span class="title">Топоры-колуны</span><span class="dop"> БАРС</span></a><br>
   <DT>14 мар: <DD><a href="/catalog/cat392.shtml" title="Новый товар"><span class="title">Ножницы газонные</span><span class="dop"> PALISAD</span></a><br>
   <DT>11 мар: <DD><a href="/catalog/cat244.shtml" title="Новые товары"><span class="title">Штангенциркули</span><span class="dop"> HOBBI</span></a><br>
@@ -9,12 +10,6 @@
   <a href="/catalog/cat145.shtml" title="Цены снижены"><span class="title">Cинтекс</span></a><br>
   <DT>02 мар: <DD><a href="/catalog/cat206.shtml" title="Расширен ассортимент"><span class="title">Молотки-гвоздодеры</span><span class="dop"> TRUPER</span></a><br>
   <DT>01 мар: <DD><a href="/catalog/cat451.shtml" title="Новый товар"><span class="title">Набор садового инстр.</span><span class="dop"> TRUPER</span></a><br>
-  <DT>29 фев: <DD><a href="/catalog/cat128.shtml" title="Цены снижены"><span class="title">Ножовки по дереву</span><span class="dop"> HARDAX</span></a><br>
-  <DT>26 фев: <DD><a href="/catalog/cat295.shtml" title="Цены снижены"><span class="title">Краски аэрозольные</span><span class="dop"></span></a><br>
-  <DT>25 фев: <DD><a href="/catalog/cat273.shtml" title="Новый товар"><span class="title">Лампа местного освещения</span><span class="dop"> 36V</span></a><br>
-  <DT>16 фев: <DD><a href="/catalog/cat139.shtml" title="Новые товары"><span class="title">Молотки слесарные</span><span class="dop"> HARDAX</span></a><br>
-  <DT>15 фев: <DD><a href="/catalog/cat373.shtml" title="Новые товары"><span class="title">Грабли веерные</span><span class="dop"> PALISAD</span></a><br>
-  <DT>15 фев: <DD><a href="/catalog/cat175.shtml" title="Новый товар"><span class="title">Пена монтажная</span><span class="dop"> HENKEL</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
 <h2>Рекомендуемые товары</h2>
