--- a/pages/iblock/iblock_o.htm
+++ b/pages/iblock/iblock_o.htm
@@ -1,3 +1,9 @@
+<DT>29 фев: <DD><a href="/catalog/cat128.shtml" title="Цены снижены"><span class="title">Ножовки по дереву</span><span class="dop"> HARDAX</span></a><br>
+<DT>26 фев: <DD><a href="/catalog/cat295.shtml" title="Цены снижены"><span class="title">Краски аэрозольные</span><span class="dop"></span></a><br>
+<DT>25 фев: <DD><a href="/catalog/cat273.shtml" title="Новый товар"><span class="title">Лампа местного освещения</span><span class="dop"> 36V</span></a><br>
+<DT>16 фев: <DD><a href="/catalog/cat139.shtml" title="Новые товары"><span class="title">Молотки слесарные</span><span class="dop"> HARDAX</span></a><br>
+<DT>15 фев: <DD><a href="/catalog/cat373.shtml" title="Новые товары"><span class="title">Грабли веерные</span><span class="dop"> PALISAD</span></a><br>
+<DT>15 фев: <DD><a href="/catalog/cat175.shtml" title="Новый товар"><span class="title">Пена монтажная</span><span class="dop"> HENKEL</span></a><br>
 <DT>12 фев: <DD><a href="/catalog/cat148.shtml" title="Цены снижены"><span class="title">Кисти плоские флейцевые</span><span class="dop"> ЕВРО</span></a><br>
 <DT>12 фев: <DD><a href="/catalog/cat409.shtml" title="Новый товар"><span class="title">Секатор</span><span class="dop"> PALISAD</span></a><br>
 <DT>12 фев: <DD><a href="/catalog/cat391.shtml" title="Новый товар"><span class="title">Сучкорез</span><span class="dop"> PALISAD</span></a><br>
