--- a/pages/iblock/iblock.htm
+++ b/pages/iblock/iblock.htm
@@ -1,15 +1,15 @@
 <div id=n>
-<h2>Новинки</h2><DL>
-  <DT>15 мар: <DD><a href="/catalog/cat115.shtml" title="Цены снижены"><span class="title">Сетка (лента)</span><span class="dop"> "серпянка"</span></a><br>
+  <h2>Новинки</h2><DL>
+  <DT>21 мар: <DD><a href="/catalog/cat212.shtml" title="Цены снижены"><span class="title">Уровни</span><span class="dop"> "Рельс"</span></a> и <a href="/catalog/cat301.shtml" title="Цены снижены"><span class="dop"> METRIC TILER</span></a><br>
+  <DT>21 мар: <DD><a href="/catalog/cat361.shtml" title="Новый товар"><span class="title">Моющее средство</span><span class="dop"> ARCTIS D-55</span></a><br>
+  <DT>21 мар: <DD><a href="/catalog/cat107.shtml" title="Новый товар"><span class="title">Нож 18 мм усил.</span><span class="dop"> "Basic-auto"</span></a><br>
+  <DT>18 мар: <DD><a href="/catalog/cat420.shtml" title="Новые товары"><span class="title">Свёрла по керамограниту</span><span class="dop"> БАРС</span></a><br>
+  <DT>18 мар: <DD><a href="/catalog/cat128.shtml" title="Новые товары"><span class="title">Ножовки по дереву</span><span class="dop"> SPARTA</span></a><br>
+  <DT>18 мар: <DD><a href="/catalog/cat112.shtml" title="Новый товар"><span class="title">Замок навесной хромированный</span><span class="dop"></span></a><br>
+  <DT>15 мар: <DD><a href="/catalog/cat115.shtml" title="Цены снижены и расширен ассортимент"><span class="title">Сетка (лента)</span><span class="dop"> "серпянка"</span></a><br>
   <DT>14 мар: <DD><a href="/catalog/cat137.shtml" title="Новые товары"><span class="title">Топоры-колуны</span><span class="dop"> БАРС</span></a><br>
   <DT>14 мар: <DD><a href="/catalog/cat392.shtml" title="Новый товар"><span class="title">Ножницы газонные</span><span class="dop"> PALISAD</span></a><br>
   <DT>11 мар: <DD><a href="/catalog/cat244.shtml" title="Новые товары"><span class="title">Штангенциркули</span><span class="dop"> HOBBI</span></a><br>
-  <DT>03 мар: <DD><a href="/catalog/cat424.shtml" title="Снижены цены на три вида валиков"><span class="title">Малярные валики:</span><span class="dop"></span></a><br>&emsp;&emsp;&emsp;
-  <a href="/catalog/cat142.shtml" title="Цены снижены"><span class="title">Termofusion</span></a>,
-  <a href="/catalog/cat147.shtml" title="Цены снижены"><span class="title">Грейтекс</span></a>,
-  <a href="/catalog/cat145.shtml" title="Цены снижены"><span class="title">Cинтекс</span></a><br>
-  <DT>02 мар: <DD><a href="/catalog/cat206.shtml" title="Расширен ассортимент"><span class="title">Молотки-гвоздодеры</span><span class="dop"> TRUPER</span></a><br>
-  <DT>01 мар: <DD><a href="/catalog/cat451.shtml" title="Новый товар"><span class="title">Набор садового инстр.</span><span class="dop"> TRUPER</span></a><br>
 </DL><!-- >=====================< -->
 </div><div id=r1>
 <h2>Рекомендуемые товары</h2>
