--- a/pages/iblock/iblock_o.htm
+++ b/pages/iblock/iblock_o.htm
@@ -1,3 +1,9 @@
+<DT>03 мар: <DD><a href="/catalog/cat424.shtml" title="Снижены цены на три вида валиков"><span class="title">Малярные валики:</span><span class="dop"></span></a><br>&emsp;&emsp;&emsp;
+  <a href="/catalog/cat142.shtml" title="Цены снижены"><span class="title">Termofusion</span></a>,
+  <a href="/catalog/cat147.shtml" title="Цены снижены"><span class="title">Грейтекс</span></a>,
+  <a href="/catalog/cat145.shtml" title="Цены снижены"><span class="title">Cинтекс</span></a><br>
+<DT>02 мар: <DD><a href="/catalog/cat206.shtml" title="Расширен ассортимент"><span class="title">Молотки-гвоздодеры</span><span class="dop"> TRUPER</span></a><br>
+<DT>01 мар: <DD><a href="/catalog/cat451.shtml" title="Новый товар"><span class="title">Набор садового инстр.</span><span class="dop"> TRUPER</span></a><br>
 <DT>29 фев: <DD><a href="/catalog/cat128.shtml" title="Цены снижены"><span class="title">Ножовки по дереву</span><span class="dop"> HARDAX</span></a><br>
 <DT>26 фев: <DD><a href="/catalog/cat295.shtml" title="Цены снижены"><span class="title">Краски аэрозольные</span><span class="dop"></span></a><br>
 <DT>25 фев: <DD><a href="/catalog/cat273.shtml" title="Новый товар"><span class="title">Лампа местного освещения</span><span class="dop"> 36V</span></a><br>
